--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,7 @@ on:
   schedule:
     # 定时执行,会有延时
     - cron: 0 1 * * *
+  workflow_dispatch:
 #   push:
 #     # push后触发
 #     branches: [ "main" ]
