--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,11 +4,8 @@ on:
   schedule:
     # 定时执行,会有延时
     - cron: 0 1 * * *
-  workflow_dispatch:
-#   push:
-#     # push后触发
-#     branches: [ "main" ]
-    
+  workflow_dispatch:  # 手动触发
+
 env:
   TZ: Asia/Shanghai
   
@@ -26,9 +23,11 @@ jobs:
         env:
           NAME: ${{ secrets.NAME }}
           EMAIL: ${{ secrets.EMAIL }}
+          TOKEN: ${{ secrets.TOKEN }}
         run: |
           git config --global user.email $EMAIL
           git config --global user.name $NAME
+          git remote set-url origin https://$TOKEN@github.com/${{ github.repository }}.git
           git add ./*
           git commit -m "Update on $(date +%F' '%X)" -a
           git push
